# python-env-credentials

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml  pythonpackage.yml
credentials/: credentials.py
django_credentials/: .coveragerc  apps.py  credentials.py  example.txt  lib.py  runtests.py  tests.py
django_credentials/management/commands/: credentials.py  edit_credentials.py  init_credentials.py
env_credentials/: credentials.py  credentials_test.py  example.env
testproject/: .gitignore
testproject/testproject/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_credentials.py  test_django_credentials.py  test_django_secrets.py
tests/test_fixtures/: .gitignore  settings.py
