[tool.poetry]
name = "env-credentials"
version = "0.1.0"
description = "A library to maintain and use encrypted .env files."
license = "MIT"
authors = ["Chris Muthig <camuthig@gmail.com>"]
readme = 'README.md'
repository = 'https://github.com/camuthig/python-env-credentials'
documentation = 'https://github.com/camuthig/python-env-credentials'
keywords = [
    "dotenv",
    "credentials",
    "encrypted",
    "settings",
    "environment variables",
    "env",
]
packages = [
    { include = "env_credentials" },
    { include = "django_credentials" }
]

[tool.poetry.dependencies]
python = "^3.6"
cryptography = "^2.9"
python-dotenv = "^0.13.0"

django = {version = "^2.2 || ^3.0", optional = true}

[tool.poetry.dev-dependencies]
django-stubs = {version = "^1.5.0"}
flake8 = {version = "^3.7.9"}
mypy = {version = "^0.770"}
pytest = {version = "^5.2"}
tox = {version = "^3.6.14"}
codecov = {version = "^2.0.22"}
pytest-cov = {version = "^2.8.1"}
coverage = {version = "^5.1"}

[tool.poetry.extras]
django = ["django"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
