[tool.poetry]
name = "env-credentials"
version = "0.1.0"
description = "A library to maintain and use encrypted .env files."
license = "MIT"
authors = ["Chris Muthig <camuthig@gmail.com>"]
readme = 'README.md'
repository = 'https://github.com/camuthig/python-env-credentials'
documentation = 'https://github.com/camuthig/python-env-credentials'
keywords = [
    "dotenv",
    "credentials",
    "encrypted",
    "settings",
    "environment variables",
    "env",
]
packages = [
    { include = "env_credentials" },
    { include = "django_credentials" }
]

[tool.poetry.dependencies]
python = "^3.7"
cryptography = "^3.2"
python-dotenv = "^0.19"

django = [
    {version = "^3.2", python = "3.7", optional = true},
    {version = "^3.2 || ^4.0", python = "^3.8", optional = true}
]

[tool.poetry.dev-dependencies]
django-stubs = "^1.5.0"
flake8 = "^3.7.9"
mypy = "^0.770"
pytest = "^7.1"
tox = "^3.25.0"
codecov = "^2.0.22"
pytest-cov = "^2.8.1"
coverage = "^5.1"
nox = "^2022.1.7"

[tool.poetry.extras]
django = ["django"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
